fixed the scrollbar, text overflow and the team container drop down

--- a/chathaven/frontend/src/app/components/chat/component/channelSideBar/channelSideBar.component.css
+++ b/chathaven/frontend/src/app/components/chat/component/channelSideBar/channelSideBar.component.css
@@ -93,7 +93,7 @@
   clip-path: inset(0% 0% 0% 0% round 10px);
   transition: all 0.4s;
   border: 1px solid var(--hover-color);
-  z-index: 2;
+  z-index: 1005;
 }
 
 .dropdown-team-setting-list {
@@ -364,7 +364,7 @@ ul {
   color: white;
   font-size: 14px;
   box-sizing: border-box;
-  transition: all 0.3s ease; 
+  transition: all 0.3s ease;
 }
 
 .search-input::placeholder {
@@ -374,7 +374,7 @@ ul {
 .search-input:focus {
   outline: none;
   border-color: var(--primary-color);
-  color: var(--primary-text-color); 
+  color: var(--primary-text-color);
   background-color: var(--hover-color);
   box-shadow: 0 0 0 1px var(--primary-color);
 }
@@ -405,6 +405,14 @@ ul {
   overflow-y: auto;
   z-index: 1001;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For IE and Edge */
+  overflow-x: hidden;
+  text-overflow: hidden;
+}
+
+.search-results::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
 }
 
 .search-results-header {
@@ -417,6 +425,7 @@ ul {
   padding: 12px 16px;
   cursor: pointer;
   border-bottom: 1px solid var(--border-color);
+  max-width: 100%;
 }
 
 .search-result-item:hover {
@@ -429,6 +438,10 @@ ul {
 }
 
 .result-content {
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   margin-bottom: 4px;
 }
 
@@ -511,7 +524,7 @@ ul {
 }
 
 .search-filters::before {
-  content: '';
+  content: "";
   position: fixed;
   top: 0;
   left: 0;
@@ -672,4 +685,12 @@ ul {
 
 .username-search-results .search-result-item:hover {
   background-color: var(--hover-color);
+}
+
+.search-results::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
+
+.username-search-results::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
 }
